# ndscan

./: .buildinfo  .bulldozer.yml  .flake8  .gitignore  .style.yapf  README.md  apidocs.html  coding-conventions.html  design-retrospective.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js  setup.py
.circleci/: config.yml
.github/artiq-emulator/: device_db.py  flake.nix
.github/workflows/: emulator.yml
_modules/: index.html
_modules/ndscan/: auto_fit.html  experiment.html  fragment.html  parameters.html  result_channels.html  scan_runner.html  subscan.html
_modules/ndscan/experiment/: annotations.html  default_analysis.html  entry_point.html  fragment.html  parameters.html  result_channels.html  scan_generator.html  scan_runner.html  subscan.html
_modules/ndscan/results/: arguments.html  pyplot.html  tools.html
_sources/: apidocs.rst.txt  coding-conventions.rst.txt  design-retrospective.rst.txt  index.rst.txt
_static/: theme_overrides.css
conda/ndscan/: meta.yaml
docs/: apidocs.rst  coding-conventions.rst  conf.py  index.rst
examples/: rabi_flop.py  rabi_flop_custom_analysis.py  rabi_flop_fit.py  rabi_flop_pi_time_fit.py  sim_pi_time_fit.py  sim_rabi_flop.py
ndscan/: _qt.py  applet.py  argument_editor.py  auto_fit.py  dashboard_plugin.py  dataset_janitor.py  default_analysis.py  experiment.py  fragment.py  fuzzy_select.py  parameters.py  result_channels.py  scan.py  scan_generator.py  scan_runner.py  show.py  subscan.py  to_txt.py  utils.py
ndscan/dashboard/: argument_editor.py  param_tree_dialog.py  scan_options.py  utils.py
ndscan/examples/: example.py  flop_674.py  sim_rabi_flop.py
ndscan/experiment/: __init__.py  annotations.py  default_analysis.py  entry_point.py  fragment.py  parameters.py  result_channels.py  scan_generator.py  scan_runner.py  subscan.py  utils.py
ndscan/fitting/: __init__.py  fitting.py  oitg.py  rabi_flop.py  sinusoid.py
ndscan/plots/: __init__.py  annotation_items.py  colormaps.py  container.py  container_widgets.py  cursor.py  image_2d.py  model.py  model_hdf5.py  model_subscan.py  model_subscriber.py  online_analysis.py  plot_widgets.py  rolling_1d.py  utils.py  xy_1d.py
ndscan/plots/model/: __init__.py  hdf5.py  online_analysis.py  select_point.py  slice.py  subscan.py  subscriber.py  utils.py
ndscan/results/: arguments.py  pyplot.py  tools.py
test/: emulator_environment.py  fixtures.py  mock_environment.py  test_experiment.py  test_experiment_default_analysis.py  test_experiment_entrypoint.py  test_experiment_fragment.py  test_experiment_kernel.py  test_experiment_parameters.py  test_experiment_scan_generator.py  test_experiment_subscan.py  test_experiment_utils.py  test_plots_model_subscriber.py  test_plots_schema_handling.py  test_plots_utils.py  test_subscan.py  test_utils.py
