[project]
name = "ndscan"
version = "v0.4.0"
description = "Composable experiment fragments and multi-dimensional scans for ARTIQ"
authors = [{ name = "David Nadlinger", email = "code@klickverbot.at" }]
requires-python = ">=3.10"
license = "LGPL-3.0-or-later"

# Earlier versions of qasync had horrendous threading issues on Windows, which (for not
# entirely obvious reasons) mostly show up on Python 3.10 and up. Thus far, ndscan still
# works against both Qt 5 and Qt 6, but since early ARTIQ 9, upstream ARTIQ has switched
# to Qt 6. If working against older versions of ARTIQ is of interest, we can revisit the
# way the dependencies are specified here.
dependencies = [
    "artiq>=8.0.dev0",
    "h5py>=3.8.0",
    "numpy>=1.24",
    "oitg",
    "pyqt6>=6.5.2",
    "pyqtgraph>=0.13.3",
    "qasync>=0.27.1",
    "sipyco",
]

[project.scripts]
ndscan_dataset_janitor = "ndscan.dataset_janitor:main"
ndscan_show = "ndscan.show:main"
ndscan_to_txt = "ndscan.to_txt:main"

[dependency-groups]
dev = [
    "flake8==6.1.0",
    "matplotlib>=3.8.0",
    "poethepoet>=0.22.1",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx>=7.2.6",
    "toml>=0.10.2",
    "yapf==0.32.0",
]

[tool.uv.sources]
artiq = { git = "https://github.com/m-labs/artiq.git", branch = "release-8" }
oitg = { git = "https://github.com/oxfordiontrapgroup/oitg.git" }
sipyco = { git = "https://github.com/m-labs/sipyco.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks]
docs = "make -C $POE_ROOT/docs html"
fmt = "yapf -i -r examples ndscan test"
fmt-test = "yapf -d -r examples ndscan test"
lint = "flake8 examples ndscan test"
test = "python -m unittest discover -v test"
